--- a/rjournal/RJwrapper.tex
+++ b/rjournal/RJwrapper.tex
@@ -9,6 +9,7 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
 % Any extra LaTeX you need in the preamble
+\usepackage{booktabs}
 \usepackage[normalem]{ulem}
 \usepackage{float}
 \newfloat{algorithm}{hbt}{lop}
