--- a/rjournal/greenwell.bib
+++ b/rjournal/greenwell.bib
@@ -1,18 +1,28 @@
-@Manual{R,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2012},
-  note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org/},
+% Books ------------------------------------------------------------------------
+
+@book{achen-1982-interpreting,
+  title = {Interpreting and Using Regression},
+  author = {Achen, Christopher H.},
+  isbn = {9780803900004},
+  lccn = {82042675},
+  series = {Interpreting and Using Regression},
+  year = {1982},
+  publisher = {Sage Publications}
 }
 
-@article{ihaka:1996,
-  Author = {Ihaka, Ross and Gentleman, Robert},
-	Journal = {Journal of Computational and Graphical Statistics},
-	Number = 3,
-	Pages = {299--314},
-	Title = {R: A Language for Data Analysis and Graphics},
-	Volume = 5,
-	Year = 1996}
+
+% Articles ---------------------------------------------------------------------
+
+@article{strumbelj-2014-explaining,
+  author = {{Š}trumbelj, Erik and Kononenko, Igor},
+  title = {Explaining prediction models and individual predictions with feature contributions},
+  journal = {Knowledge and Information Systems},
+  year = {2014},
+  volume = {31},
+  number = {3},
+  pages = {647--665},
+  url = {https://doi.org/10.1007/s10115-013-0679-x}
+}
+
+
+% Other ------------------------------------------------------------------------
