--- a/rjournal/greenwell.bib
+++ b/rjournal/greenwell.bib
@@ -24,5 +24,72 @@
   url = {https://doi.org/10.1007/s10115-013-0679-x}
 }
 
+@article{gosiewska-2019-iBreakDown,
+  author    = {Alicja Gosiewska and Przemyslaw Biecek},
+  title     = {iBreakDown: Uncertainty of Model Explanations for Non-additive Predictive
+               Models},
+  journal   = {CoRR},
+  volume    = {abs/1903.11420},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1903.11420},
+  archivePrefix = {arXiv},
+  eprint    = {1903.11420},
+  timestamp = {Tue, 02 Apr 2019 11:16:55 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1903-11420.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{veronika-2017-catboost,
+  author = {Anna Veronika Dorogush and Andrey Gulin and Gleb Gusev and Nikita Kazeev and Liudmila Ostroumova Prokhorenkova and
+               Aleksandr Vorobev},
+  title = {Fighting biases with dynamic boosting},
+  journal = {CoRR},
+  volume = {abs/1706.09516},
+  year = {2017},
+  url = {http://arxiv.org/abs/1706.09516},
+  archivePrefix = {arXiv},
+  eprint = {1706.09516},
+  timestamp = {Mon, 13 Aug 2018 16:46:23 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/DorogushGGKPV17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{chen-2016-xgboost,
+  author = {Tianqi Chen and Carlos Guestrin},
+  title = {XGBoost: {A} Scalable Tree Boosting System},
+  journal = {CoRR},
+  volume = {abs/1603.02754},
+  year = {2016},
+  url = {http://arxiv.org/abs/1603.02754},
+  archivePrefix = {arXiv},
+  eprint = {1603.02754},
+  timestamp = {Mon, 13 Aug 2018 16:47:00 +0200},
+  biburl = {https://dblp.org/rec/journals/corr/ChenG16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 
 % Other ------------------------------------------------------------------------
+
+@incollection{lundberg-2017-KernelSHAP,
+	Author = {Lundberg, Scott M and Lee, Su-In},
+	Booktitle = {Advances in Neural Information Processing Systems 30},
+	Editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+	Pages = {4765--4774},
+	Publisher = {Curran Associates, Inc.},
+	Title = {A Unified Approach to Interpreting Model Predictions},
+	Url = {http://papers.nips.cc/paper/7062-a-unified-approach-to-interpreting-model-predictions.pdf},
+	Year = {2017},
+	Bdsk-Url-1 = {http://papers.nips.cc/paper/7062-a-unified-approach-to-interpreting-model-predictions.pdf}}
+	
+
+@incollection{ke-2017-lightgbm,
+	Author = {Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+	Booktitle = {Advances in Neural Information Processing Systems 30},
+	Editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+	Pages = {3146--3154},
+	Publisher = {Curran Associates, Inc.},
+	Title = {LightGBM: A Highly Efficient Gradient Boosting Decision Tree},
+	Url = {http://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf},
+	Year = {2017},
+	Bdsk-Url-1 = {http://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf}}
