--- a/rjournal/greenwell.tex
+++ b/rjournal/greenwell.tex
@@ -87,8 +87,14 @@ Shapley contribution: & \$9.50      & \$14.67      & \$5.83       \\ \bottomrule
 So the next time the bartender asks how you want to split the tab, whip
 out a pencil and do the math!
 
+\hypertarget{advantages}{%
+\subsubsection{Advantages}\label{advantages}}
+
+\hypertarget{disadvantages}{%
+\subsubsection{Disadvantages}\label{disadvantages}}
+
 \hypertarget{estimating-shapley-values-via-monte-carlo-simulation-sampleshap}{%
-\subsubsection{Estimating Shapley values via Monte Carlo simulation:
+\subsection{Estimating Shapley values via Monte Carlo simulation:
 SampleSHAP}\label{estimating-shapley-values-via-monte-carlo-simulation-sampleshap}}
 
 A single estimate of the contribution of \(x_i\) to \(f\left(x\right)\)
@@ -126,14 +132,15 @@ depends on the variance of each feature in the observed training data,
 but typically \(R >= 50--100\) will suffice (\textbf{Need reference}).
 
 \hypertarget{special-cases}{%
-\subsubsection{Special cases}\label{special-cases}}
+\subsection{Special cases}\label{special-cases}}
 
 The following sections discuss two special cases where exact Shapley
 explanations can be computed efficiently: additive linear models, and
 shallow trees and tree ensembles.
 
 \hypertarget{linear-models-linearshap}{%
-\paragraph{Linear models: LinearSHAP}\label{linear-models-linearshap}}
+\subsubsection{Linear models:
+LinearSHAP}\label{linear-models-linearshap}}
 
 Cite somewhere \cite{strumbelj-2014-explaining}.
 
@@ -159,15 +166,64 @@ corresponding sample mean \(\bar{X}_i\). The quantity
 \emph{situational importance of $X_i$} \citep{achen-1982-interpreting}.
 
 \hypertarget{tree-based-models-treeshap}{%
-\paragraph{Tree-based models:
+\subsubsection{Tree-based models:
 TreeSHAP}\label{tree-based-models-treeshap}}
 
 TBD.
 
-\hypertarget{shapley-values-in-r}{%
-\subsection{Shapley values in R}\label{shapley-values-in-r}}
+\hypertarget{kernal-based-approximate-shapley-values-kernelshap}{%
+\subsubsection{Kernal-based approximate Shapley values:
+KernelSHAP}\label{kernal-based-approximate-shapley-values-kernelshap}}
 
-TBD.
+KernelSHAP \citep{lundberg-2017-KernelSHAP} uses a specially-weighted
+local linear regression to estimate SHAP values for any model. Unlike
+SampleSHAP\ldots{}
+
+\hypertarget{shapley-values-in-r-and-other-lnaguages}{%
+\subsection{Shapley values in R (and other
+lnaguages)}\label{shapley-values-in-r-and-other-lnaguages}}
+
+The \CRANpkg{iml} package \citep{R-iml} provides the \code{Shapley()}
+function, which is a direct implementation of
+Algorithm\textasciitilde{}\ref{alg:SampleSHAP}. It is written in
+\CRANpkg{R6} \citep{R-R6}.
+
+Package \CRANpkg{iBreakDown} implements a general approach to explaining
+the predictions from supervised models, called \dfn{Break Down}
+\citep{gosiewska-2019-iBreakDown}. SampleSHAP values can be computed as
+a special case from random Break Down profiles; see
+\code{iBreakDown::\code{shap()} for details}.
+
+\CRANpkg{shapper} provides an R interface to the Python \pkg{shap}
+library \citep{lundberg-2017-KernelSHAP} using \CRANpkg{reticulate}
+\citep{R-reticulate}; however, it currently only supports KernelSHAP
+(\pkg{shap} itself suppors SampleSHAP, TreeSHAP, LinearSHAP, as well as
+various other model-specific Shapley explanation methods).
+
+TreeSHAP has been directly incorporated into most implementations of
+XGBoost \citep{chen-2016-xgboost} (including \CRANpkg{xgboost}
+\citep{R-xgboost}), CatBoost \citep{eronika-2017-catboost}, and LightGBM
+\citep{ke-2017-lightgbm}. Both \CRANpkg{fastshap} \citep{R-fastshap} and
+\CRANpkg{SHAPforxgboost} \citep{R-SHAPforxgboost} provide an interface
+to \pkg{xgboost}'s TreeSHAP implementation.
+
+\CRANpkg{fastshap} provides an efficient implementation of SampleSHAP
+and makes it a viable option for explaining the predictions from model's
+where efficient model-specific Shapley methods do not exist or are not
+yet implemented.
+
+On GitHub
+
+\begin{itemize}
+\item
+  shapr
+\item
+  shapFlex
+\end{itemize}
+
+In python, there's \pkg{shap}. In julia, there's \pkg{SampleSHAP.jl} (a
+lightweight port of \pkg{fastshap}), \pkg{ShapML.jl}, and
+\pkg{ShapleyValues.jl}.
 
 \hypertarget{so-why-fastshap}{%
 \subsubsection{So why fastshap?}\label{so-why-fastshap}}
