--- a/rjournal/greenwell.bib
+++ b/rjournal/greenwell.bib
@@ -68,8 +68,48 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{R-sellereite,
+  doi = {10.21105/joss.02027},
+  url = {https://doi.org/10.21105/joss.02027},
+  year = {2019},
+  publisher = {The Open Journal},
+  volume = {5},
+  number = {46},
+  pages = {2027},
+  author = {Nikolai Sellereite and Martin Jullum},
+  title = {shapr: An R-package for explaining machine learning models with dependence-aware Shapley values},
+  journal = {Journal of Open Source Software}
+}
+
 
 % Other ------------------------------------------------------------------------
+
+@misc{aas-2019-explaining,
+  title = {Explaining individual predictions when features are dependent: More accurate approximations to Shapley values},
+  author = {Kjersti Aas and Martin Jullum and Anders Løland},
+  year = {2019},
+  eprint = {1903.10464},
+  archivePrefix = {arXiv},
+  primaryClass = {stat.ML}
+}
+
+@misc{R-shapFlex,
+  title = {Shapley Decomposition of R-Squared in Machine Learning Models},
+  author = {Nickalus Redell},
+  year = {2019},
+  eprint = {1908.09718},
+  archivePrefix = {arXiv},
+  primaryClass = {stat.ME}
+}
+
+@misc{frye-2019-asymmetric,
+  title = {Asymmetric Shapley values: incorporating causal knowledge into model-agnostic explainability},
+  author = {Christopher Frye and Ilya Feige and Colin Rowat},
+  year = {2019},
+  eprint = {1910.06358},
+  archivePrefix = {arXiv},
+  primaryClass = {stat.ML}
+}
 
 @incollection{lundberg-2017-KernelSHAP,
 	Author = {Lundberg, Scott M and Lee, Su-In},
