--- a/rjarticle/greenwell.tex
+++ b/rjarticle/greenwell.tex
@@ -409,7 +409,7 @@ sum(ex.lightgbm)  # since baseline is included, this should some to prediction
 
 \includegraphics[width=1\linewidth]{greenwell_files/figure-latex/ex-titanic-benchmark-1}
 
-In this example, for \(R = 1000\) MC repetitions, \pkg{fastshap} is roughly \texttt{8.0229885} times faster than \pkg{iml}, and nearly \texttt{579.6091954} times faster than \pkg{iBreakDown}.
+In this example, for \(R = 1000\) MC repetitions, \pkg{fastshap} is roughly \texttt{7.3902439} times faster than \pkg{iml}, and nearly \texttt{658.1300813} times faster than \pkg{iBreakDown}.
 
 \hypertarget{example-visualizing-global-explanations-with-and}{%
 \section{\texorpdfstring{Example: visualizing global explanations with \pkg{fastshap} and \pkg{shapviz}}{Example: visualizing global explanations with  and }}\label{example-visualizing-global-explanations-with-and}}
@@ -586,6 +586,10 @@ sv_waterfall(viz, max_display = 10)
 \end{verbatim}
 
 \includegraphics[width=1\linewidth]{greenwell_files/figure-latex/als-ngboost-fastshap-1}
+
+\hypertarget{references}{%
+\section*{References}\label{references}}
+\addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
